--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -334,6 +334,73 @@
         "_summary": "Product's summary",
         "_create_prod": "Create product"
     },
+    "UPDATE_PROD_SPEC":{
+        "_back": "Back",
+        "_update": "Update product specification",
+        "_new": "Update product",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Product's general information",
+        "_bundle": "Bundle",
+        "_bundle_info": "Product's blundle information",
+        "_comp_profile": "Compliance profile",
+        "_comp_profile_info": "Product's compliance profile",
+        "_no_comp_profile": "No compliance profile included.",
+        "_chars": "Characteristics",
+        "_chars_info": "Product's characteristics",
+        "_resource": "Resource Specs",
+        "_resource_info": "Product's resource specifications",
+        "_service": "Service Specs",
+        "_service_info": "Product's service specifications",
+        "_attachments": "Attachments",
+        "_attachments_info": "Product's attachments",
+        "_relationships": "Relationships",
+        "_relationships_info": "Product's relationships",
+        "_product_name": "Name",
+        "_product_version": "Version",
+        "_product_brand": "Brand",
+        "_id_number": "ID Number",
+        "_product_description": "Description",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_next": "Next",
+        "_is_bundled": "Bundled product?",
+        "_status": "Status",
+        "_type": "Type",
+        "_last_update": "Last update",
+        "_select": "Select",
+        "_simple": "Simple",
+        "_load_more": "Load more",
+        "_add_comp": "Add Compliance profile",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_save_char": "Save characteristic",
+        "_resource_specs": "Resource specifications",
+        "_service_specs": "Service specifications",
+        "_add_prod_img": "Add product image",
+        "_drop_files": "Drop files to attatch or",
+        "_select_files": "select a file.",
+        "_add_prod_img_url": "Add product image using URL",
+        "_add_att": "Add attachments",
+        "_no_att": "No attachments included.",
+        "_new_att": "Add new attachment",
+        "_save_att": "Save attachment",
+        "_no_relatioships": "No relationships included.",
+        "_relationship_type": "Relationship type",
+        "_add_relationship": "Add new relationship",
+        "_save_relationship": "Save relationship",
+        "_profile_pic": "Profile picture",
+        "_finish": "Finish",
+        "_summary": "Product's summary",
+        "_update_prod": "Update product"
+    },
     "CREATE_RES_SPEC": {
         "_back": "Back",
         "_create": "Create resource specification",
@@ -391,6 +458,98 @@
         "_create_serv": "Create service"
     },
     "CREATE_OFFER":{
+        "_back": "Back",
+        "_create": "Create product offer",
+        "_new": "New product offer",
+        "_steps": "Steps",
+        "_general": "General",
+        "_general_info": "Offer's general information",
+        "_bundle": "Bundle",
+        "_bundle_info": "Offer's bundle information",
+        "_prod_spec": "Product Specification",
+        "_prod_spec_info": "Offer's related product",
+        "_catalog": "Catalog",
+        "_catalog_info": "Offer's related catalog",
+        "_category": "Category",
+        "_category_info": "Category info",
+        "_license": "License",
+        "_license_info": "Offer's license",
+        "_sla": "SLA",
+        "_sla_info": "Offer's SLA",
+        "_price_plans": "Price plans",
+        "_price_plans_info": "Offer's pricing",
+        "_name": "Name",
+        "_description": "Description",
+        "_version": "Version",
+        "_preview": "Preview",
+        "_show_preview": "Show preview",
+        "_next": "Next",
+        "_is_bundled": "Bundled offer?",
+        "_status": "Status",
+        "_type": "Type",
+        "_last_update": "Last update",
+        "_select": "Select",
+        "_simple": "Simple",
+        "_load_more": "Load more",
+        "_add_comp": "Add Compliance profile",
+        "_value": "Value",
+        "_actions": "Actions",
+        "_no_chars": "No characteristics included.",
+        "_values": "Values",
+        "_new_char": "Create new characteristic",
+        "_add_values": "Add values",
+        "_unit": "Unit",
+        "_from": "From",
+        "_to": "To",
+        "_save_char": "Save characteristic",
+        "_resource_specs": "Resource specifications",
+        "_service_specs": "Service specifications",
+        "_add_prod_img": "Add product image",
+        "_drop_files": "Drop files to attatch or",
+        "_select_files": "select a file.",
+        "_add_prod_img_url": "Add product image using URL",
+        "_add_att": "Add attachments",
+        "_no_att": "No attachments included.",
+        "_new_att": "Add new attachment",
+        "_save_att": "Save attachment",
+        "_no_relatioships": "No relationships included.",
+        "_relationship_type": "Relationship type",
+        "_add_relationship": "Add new relationship",
+        "_save_relationship": "Save relationship",
+        "_profile_pic": "Profile picture",
+        "_finish": "Finish",        
+        "_summary": "Product's summary",
+        "_create_prod": "Create product",
+        "_choose_license": "Choose a license",
+        "_standard_license": "Standard open data licenses",
+        "_treatment": "Treatment",
+        "_exclusivity": "Exclusivity",
+        "_sector": "Sector",
+        "_region": "Region",
+        "_timeframe": "Timeframe",
+        "_purpose": "Purpose",
+        "_transferability": "Transferability",
+        "_no_sla": "No SLA included",
+        "_threshold": "Threshold",
+        "_new_metric": "Define new metric",
+        "_add_metric": "Add metric",
+        "_no_prices": "No price plans included.",
+        "_is_free_price": "Is this offer open?",
+        "_new_price": "New price plan",
+        "_create_price": "Create price plan",
+        "_choose_type": "Choose a type",
+        "_enter_value": "Enter a value",
+        "_add_condition": "Add a condition",
+        "_choose_period": "Choose a pricing period",
+        "_price_alter": "Price alteration",
+        "_create_license": "Create license",
+        "_price": "Price",
+        "_save_price":"Save price",
+        "_save_license": "Save license",
+        "_no_prod_spec": "Bundled offers can't include product specifications.",
+        "_cancel": "Cancel"
+    },
+    "UPDATE_OFFER":{
         "_back": "Back",
         "_create": "Create product offer",
         "_new": "New product offer",
