--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -584,7 +584,7 @@
         "_general_info": "Offer's general information",
         "_bundle": "Bundle",
         "_bundle_info": "Offer's bundle information",
-        "_prod_spec": "Product Specification",
+        "_prod_spec": "Product Spec",
         "_prod_spec_info": "Offer's related product",
         "_catalog": "Catalog",
         "_catalog_info": "Offer's related catalog",
@@ -680,7 +680,7 @@
         "_general_info": "Offer's general information",
         "_bundle": "Bundle",
         "_bundle_info": "Offer's bundle information",
-        "_prod_spec": "Product Specification",
+        "_prod_spec": "Product Spec",
         "_prod_spec_info": "Offer's related product",
         "_catalog": "Catalog",
         "_catalog_info": "Offer's related catalog",
@@ -782,7 +782,7 @@
         "_serv_spec": "Service Specifications",
         "_res_spec": "Resource Specifications",
         "_search": "Search",
-        "_add_new_serv": "Add new service specification",
+        "_add_new_serv": "Add new service",
         "_filter_state": "Filter by state",
         "_state": "State",
         "_order_by": "Order by...",
@@ -795,7 +795,7 @@
         "_status": "Status",
         "_actions": "Actions",
         "_load_more": "Load more",
-        "_add_new_res": "Add new resource specification",
+        "_add_new_res": "Add new resource",
         "_add_new_prod": "Add new product specification",
         "_filter_type": "Filter by type",
         "_all": "All",
