--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,7 +153,7 @@
     "FOOTER": {
         "_about": "About",
         "_privacy": "Privacy Policy",
-        "_licensing": "Licensing",
+        "_licensing": "Terms of Use",
         "_contact": "Contact",
         "_rights": "All Rights Reserved"
     },
