--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -254,7 +254,10 @@
         "_mybills": "My billing addresses",
         "_user_id": "User id",
         "_no_orders": "No orders found",
-        "_organization": "Organization"
+        "_organization": "Organization",
+        "_medium_type": "Medium type",
+        "_preferred": "Preferred",
+        "_no_mediums": "There's no contact medium information."
     },
     "PRODUCT_INVENTORY":{
         "_loading": "Loading...",
