--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -514,6 +514,8 @@
         "_from": "From",
         "_to": "To",
         "_save_char": "Save characteristic",
+        "_json_value": "JSON Value",
+        "_add_json": "Add JSON Value",
         "_resource_specs": "Resource specifications",
         "_service_specs": "Service specifications",
         "_add_prod_img": "Add product image",
